package org.xiaoxiancai.imhere.common.protos;

import "BusinessTypeProtos.proto";

option java_package = "org.xiaoxiancai.imhere.common.protos";
option java_outer_classname = "BusinessSelectorProtos";

// 业务选择器
message BusinessSelector {
  	
  	required bool isSuccess = 1;
  
	required BusinessType businessType = 2;

}